--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # Byte-compiled / optimized / DLL files
-**/__pycache__/
-*/**/_pycache__/
 *.py[cod]
+*/**/*.cpython*
+*/**/*.pyc
 *$py.class
+
 
 # C extensions
 *.so
